--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@fontsource/roboto": "^4.5.7",
     "@mui/material": "^5.8.3",
     "aws-amplify": "^4.3.24",
+    "crypto": "^1.0.1",
     "microphone-stream": "^6.0.1",
     "next": "12.1.6",
+    "query-string": "^7.1.1",
     "react": "18.1.0",
     "react-dom": "18.1.0"
   },
