--- a/package.json
+++ b/package.json
@@ -9,27 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^2.19.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@fontsource/anton": "^4.5.7",
-    "@fontsource/inter": "^4.5.11",
-    "@fontsource/roboto": "^4.5.7",
-    "@mui/material": "^5.8.3",
-    "aws-amplify": "^4.3.24",
-    "crypto": "^1.0.1",
-    "microphone-stream": "^6.0.1",
-    "next": "12.1.6",
-    "query-string": "^7.1.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@aws-amplify/ui-react": "^3.5.1",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "aws-amplify": "^4.3.35",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "3.39.2",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.41",
-    "@types/react": "18.0.12",
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
-    "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
-    "typescript": "4.7.3"
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "autoprefixer": "^10.4.10",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.7.4"
+  },
+  "ct3aMetadata": {
+    "initVersion": "5.11.0"
   }
 }
