--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^3.5.1",
+    "@aws-amplify/pubsub": "^4.5.7",
+    "@aws-amplify/ui-react": "^3.5.9",
+    "@heroicons/react": "^2.0.11",
     "@trpc/client": "^9.27.2",
     "@trpc/next": "^9.27.2",
     "@trpc/react": "^9.27.2",
     "@trpc/server": "^9.27.2",
-    "aws-amplify": "^4.3.35",
+    "amazon-cognito-identity-js": "^5.2.11",
+    "aws-amplify": "^4.3.39",
+    "microphone-stream": "^6.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "3.39.2",
     "superjson": "^1.9.1",
+    "video.js": "^7.20.3",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -29,11 +35,12 @@
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.10",
+    "cypress": "^10.9.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "^4.8.4"
   },
   "ct3aMetadata": {
     "initVersion": "5.11.0"
